--- a/trunk/Specify/config/fish/fish_label.jrxml
+++ b/trunk/Specify/config/fish/fish_label.jrxml
@@ -34,14 +34,14 @@
 	<queryString><![CDATA[Select collectionobject.FieldNumber as fieldNum, collectingevent.CollectingEventID as colEvId, 
 collectionobject.CatalogNumber as cat_no, collectionobject.TimestampCreated as date, collectionobject.Name as name, taxon.FullName as species, agent.LastName as catalogedBy, locality.LocalityName as locality, locality.Latitude1 as latitude, locality.Longitude1 as longitude, preptype.Name as prepname, preparation.count as prepcount
 From collectionobject 
-Inner Join determination ON determination.CollectionObjectID = collectionobject.CollectionObjectID 
-Inner Join taxon ON determination.TaxonID = taxon.TaxonID 
+Inner Join determination DT ON DT.CollectionObjectID = collectionobject.CollectionObjectID 
+Inner Join taxon ON DT.TaxonID = taxon.TaxonID 
 Inner Join collectingevent ON collectionobject.CollectingEventID = collectingevent.CollectingEventID 
 Inner Join locality ON collectingevent.LocalityID = locality.LocalityID 
 Inner Join agent ON collectionobject.CatalogerID = agent.AgentID 
 Inner Join preparation ON collectionobject.CollectionObjectID = preparation.CollectionObjectID 
 Inner Join preptype ON preparation.PrepTypeID = preptype.PrepTypeID 
-where preptype.Name = "EtOH" && determination.DeterminationStatusID = 1 && collectionobject.CollectionObjectID $P!{itemnum}]]></queryString>
+where preptype.Name = 'EtOH' and DT.DeterminationStatusID = 983040 and collectionobject.CollectionObjectID $P!{itemnum}]]></queryString>
 
 	<field name="cat_no" class="java.lang.String"/>
 	<field name="catalogedBy" class="java.lang.String"/>
